# slampibot

./: .gitignore  CMakeLists.txt  README.md  Robot_Make_Order_Readme.md  april_tag.odt  april_tag36h11-2.odt  april_tag36h11.odt  real_CMakeLists.txt  turtlebot3_4motors.ino
ROS2_OPENCR/OpenCR_motor_control/: OpenCR_motor_control.ino  SimpleMotorControl.cpp  SimpleMotorControl.h
backup/: edu_drive_edu_bot.launch.py  ros_robot.launch.py  spb_spawn.launch.py
launch/: spb_cartographer.launch.py  spb_nav2.launch.py  spb_slamtoolbox.launch.py  spb_spawn_space.launch.py
map_table_publisher/: operate.md  package.xml  setup.cfg  setup.py
map_table_publisher/config/: camera_info.yaml  ceiling_cam_params.yaml  table_params.yaml  test_static_world.rviz
map_table_publisher/config/calibrate/: frames_2025-08-21_10.35.55.gv  ost.txt  ost.yaml
map_table_publisher/launch/: calibrated_persistent.launch.py  calibrated_test.launch.py  ceiling_camera.launch.py  improved_test.launch.py  my_apriltag.launch.py  tag_publisher.launch.py  test_static_world.launch.py
map_table_publisher/map_table_publisher/: apriltag_persistence_node.py  apriltag_tracker_node.py  calibrated_camera_processor.py  camera_calibration_node.py  ceiling_camera_processor.py  debug_visualizer.py  image_preprocessor_node.py  improved_camera_processor.py  polygon_publisher.py  raw_ceiling_camera_processor.py  rectified_camera_info_publisher.py  tag_publisher.py
myCar/: BMW.urdf.xacro  BMW_core.xacro  camera.xacro  real_BMW.urdf.xacro  ros2_control.xacro  ros_BMW.urdf.xacro
parameter/: README.md  ros_controllers.yaml
params/: spb_cartographer_gazebo.lua
program/src/robot_commander/: package.xml  setup.cfg  setup.py
program/src/robot_commander/robot_commander/: waypoint_commander_node.py
robot_commander/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_commander/config/: waypoints.yaml
robot_commander/launch/: waypoint_commander.launch.py
robot_commander/robot_commander/: waypoint_commander_node.py
robot_commander_interfaces/: CMakeLists.txt  package.xml
robot_commander_interfaces/srv/: SendWaypoint.srv
robot_web_interface/: package.xml  setup.py
robot_web_interface/robot_web_interface/: app.py
robot_web_interface/robot_web_interface/templates/: index.html
rviz/: spb_urdf.rviz
slampibot/: Robot_Make_Order_Readme.md  turtlebot3_core_config.h
slampibot/config/: my_controllers.yaml
slampibot/launch/: real_cartographer.launch.py  real_robot.launch.py  ros_robot.launch.py  spb_spawn_space.launch.py
slampibot/myCar/: real_BMW_core.xacro
slampibot/parameter/: gazebo_drive.yaml
slampibot/params/: spb_cartographer_real.lua
slampibot/rviz/: spb_urdf.rviz  spb_urdf_bmw.rviz  spb_urdf_map.rviz
slampibot/worlds/: spb_empty_space.world  spb_empty_space2.world  spb_empty_space_1.world  spb_slam_building.world
slampibot_gazebo/: Robot_Make_Order_Readme.md
slampibot_gazebo/backup/: edu_drive_edu_bot.yaml
slampibot_gazebo/launch/: real_cartographer.launch.py  real_nav.launch.py  real_robot.launch.py  spb_nav2.launch.py  spb_slamtoolbox.launch.py  spb_spawn_space.launch.py
slampibot_gazebo/myCar/: BMW.urdf  gazebo_control.xacro  output.urdf  real_BMW.urdf.xacro  real_BMW_core.urdf
slampibot_gazebo/parameter/: slampibot.yaml  spb_nav2_README.md  spb_nav2_params.yaml  waypoints.yaml
slampibot_gazebo/params/: mapper_params_online_async.yaml
slampibot_gazebo/rviz/: spb_urdf_map.rviz
src/: EduDrive.cpp  EduDrive.h  MotorController.cpp  MotorController.h  PowerManagementBoard.cpp  PowerManagementBoard.h  RPiAdapterBoard.cpp  RPiAdapterBoard.h  RPiExtensionBoard.cpp  RPiExtensionBoard.h  real_driver_node.cpp  sim_drive_node.cpp
src/can/: canprotocol.h
src/dynamixel/: DynamixelSerialPort.cpp  DynamixelSerialPort.h
table_obstacle_layer/: CMakeLists.txt  package.xml
table_obstacle_layer/include/table_obstacle_layer/: polygon_layer.hpp
table_obstacle_layer/plugin/: plugin.xml
table_obstacle_layer/src/: polygon_layer.cpp
worlds/: spb_space_slampibot.world
